# pyesef

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  mypy.ini  output.xlsx  pyproject.toml  requirements.txt  requirements_test.txt  setup.py  tox.ini
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  pre-commit-update.yml  pythonpublish.yml  stale.yml  test.yaml  test.yml
pyesef/: __init__.py  __main__.py  const.py  error.py  log.py  utils.py
pyesef/download/: __init__.py  api_extractor.py  api_loader,py  common.py
pyesef/helpers/: __init__.py  analysis.ipynb  download_package.py  extract_definitions_to_csv.py  extract_filings.py  hierarchy.py  read_and_save_filings.py  read_facts.py  read_filings.py  to_dataframe.py
pyesef/load_parse_file/: __init__.py  common.py  read_facts.py
pyesef/parse_xbrl_file/: __init__.py  common.py  load_statement_definition.py  read_and_save_filings.py  read_facts.py  save_excel.py
pyesef/static/: statement_definition.json
pyesef/static/taxonomy_2020-03-16/www.esma.europa.eu/taxonomy/2020-03-16/: esef_all-cal.xml  esef_all-def.xml  esef_all-for.xml  esef_all-gen-bg.xml  esef_all-gen-cs.xml  esef_all-gen-da.xml  esef_all-gen-de.xml  esef_all-gen-el.xml  esef_all-gen-en.xml  esef_all-gen-es.xml  esef_all-gen-et.xml  esef_all-gen-fi.xml  esef_all-gen-fr.xml  esef_all-gen-hr.xml  esef_all-gen-hu.xml  esef_all-gen-it.xml  esef_all-gen-lt.xml  esef_all-gen-lv.xml  esef_all-gen-mt.xml  esef_all-gen-nl.xml  esef_all-gen-pl.xml  esef_all-gen-pt.xml  esef_all-gen-ro.xml  esef_all-gen-sk.xml  esef_all-gen-sl.xml  esef_all-gen-sv.xml  esef_all-pre.xml  esef_all.xsd  esef_cor-dim.xml  esef_cor-for.xml  esef_cor-gen-bg.xml  esef_cor-gen-cs.xml  esef_cor-gen-da.xml  esef_cor-gen-de.xml  esef_cor-gen-el.xml  esef_cor-gen-en.xml  esef_cor-gen-es.xml  esef_cor-gen-et.xml  esef_cor-gen-fi.xml  esef_cor-gen-fr.xml  (+15 more)
pyesef/static/taxonomy_2020-03-16/www.esma.europa.eu/taxonomy/ext/: technical.xsd
pyesef/static/taxonomy_2021-03-24/: esef_all-gen-de.xml  esef_all-gen-et.xml  esef_all-gen-fr.xml  esef_all-gen-ga.xml  esef_all-gen-it.xml  esef_all-gen-lt.xml  esef_all-gen-mt.xml  esef_all-gen-pl.xml  esef_all-gen-pt.xml  esef_all-gen-sv.xml  esef_all.xsd  esef_cor-dim.xml  esef_cor-gen-bg.xml  esef_cor-gen-da.xml  esef_cor-gen-de.xml  esef_cor-gen-el.xml  esef_cor-gen-en.xml  esef_cor-gen-fi.xml  esef_cor-gen-fr.xml  esef_cor-gen-hr.xml  esef_cor-gen-it.xml  esef_cor-gen-nl.xml  esef_cor-gen-pl.xml  esef_cor-gen-pt.xml  esef_cor-lab-en.xml  esef_cor.xsd
pyesef/static/taxonomy_2021-03-24/www.esma.europa.eu/taxonomy/2021-03-24/: esef_all-cal.xml  esef_all-def.xml  esef_all-for.xml  esef_all-gen-bg.xml  esef_all-gen-cs.xml  esef_all-gen-da.xml  esef_all-gen-el.xml  esef_all-gen-en.xml  esef_all-gen-es.xml  esef_all-gen-fi.xml  esef_all-gen-hr.xml  esef_all-gen-hu.xml  esef_all-gen-lv.xml  esef_all-gen-nl.xml  esef_all-gen-ro.xml  esef_all-gen-sk.xml  esef_all-gen-sl.xml  esef_all-pre.xml  esef_cor-for.xml  esef_cor-gen-cs.xml  esef_cor-gen-es.xml  esef_cor-gen-et.xml  esef_cor-gen-ga.xml  esef_cor-gen-hu.xml  esef_cor-gen-lt.xml  esef_cor-gen-lv.xml  esef_cor-gen-mt.xml  esef_cor-gen-ro.xml  esef_cor-gen-sk.xml  esef_cor-gen-sl.xml  esef_cor-gen-sv.xml
pyesef/static/taxonomy_2021-03-24/www.esma.europa.eu/taxonomy/ext/: technical.xsd
pyesef/static/taxonomy_2022-03-24/www.esma.europa.eu/taxonomy/2022-03-24/: esef_all-cal.xml  esef_all-def.xml  esef_all-for.xml  esef_all-gen-bg.xml  esef_all-gen-cs.xml  esef_all-gen-da.xml  esef_all-gen-de.xml  esef_all-gen-el.xml  esef_all-gen-en.xml  esef_all-gen-es.xml  esef_all-gen-et.xml  esef_all-gen-fi.xml  esef_all-gen-fr.xml  esef_all-gen-ga.xml  esef_all-gen-hr.xml  esef_all-gen-hu.xml  esef_all-gen-it.xml  esef_all-gen-lt.xml  esef_all-gen-lv.xml  esef_all-gen-mt.xml  esef_all-gen-nl.xml  esef_all-gen-pl.xml  esef_all-gen-pt.xml  esef_all-gen-ro.xml  esef_all-gen-sk.xml  esef_all-gen-sl.xml  esef_all-gen-sv.xml  esef_all-pre.xml  esef_all.xsd  esef_cor-dim.xml  esef_cor-for.xml  esef_cor-gen-bg.xml  esef_cor-gen-cs.xml  esef_cor-gen-da.xml  esef_cor-gen-de.xml  esef_cor-gen-el.xml  esef_cor-gen-en.xml  esef_cor-gen-es.xml  esef_cor-gen-et.xml  esef_cor-gen-fi.xml  (+17 more)
pyesef/static/taxonomy_2022-03-24/www.esma.europa.eu/taxonomy/ext/: technical.xsd
pyesef/utils/: __init__.py  data_management.py  decorators.py  file_handler.py  file_handling.py
script/: bootstrap  run-in-env.sh  run_standalone.py
tests/: __init__.py  test_download.py  test_extract_definitions.py  test_placeholder.py  test_read_and_save_filings.py  test_read_facts.py
tests/fixtures/: api_page.json  definitions.csv
